# EAGLE-ZYBO-Linux

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.win  README.md  compose.win.yml  compose.yml
Video/: .gitignore  small_skew_skewnoise.avi
applications/: CMakeLists.txt
applications/logger/: CMakeLists.txt  logger.cpp
applications/logger-offsets/: CMakeLists.txt  main.cpp
applications/qr-test/: CMakeLists.txt  qr-test.cpp
applications/sharedmem/: CMakeLists.txt  eagle_setup_ipc.cpp  eagle_setup_ipc.hpp
applications/summer-logger/: CMakeLists.txt  summer-logger.cpp
applications/vision/: CMakeLists.txt  vision.cpp
applications/vision-qr/: CMakeLists.txt  visionqr.cpp
cmake/: Toolchain-ARMv6-RPi-Z.cmake  Toolchain-ARMv7-ZYBO.cmake
doc/: Doxyfile  Getting-Started.md  Install.md  Presentation.md  Status-Quaestionis.md  Structure.md
lkm/: Dockerfile  Makefile  build-kernel.sh  compose.yml  config  install-kernel-headers.sh
python/: .gitignore  BlenderRealtimeMulticastLogger.py  DroneLogDecoder-Plot.py  DroneLogDecoder.py  DroneVisualize.py  DummyDroneLogSender.py  DummyDroneLogSenderUnicast.py  FindSquare.ipynb  LivePlotter.py  LogLivePlots.py  MulticastDataLogger.py  MulticastDataLoggerWhiteDot.py  SummerLogger.py  SummerMulticastDataLogger.py  VideoLines.py  easy.out.avi  small_skew_skewnoise.out.avi
python-gridfinder/: setup.py
python-logentry/: loggerToby.py  setup.py
python-module/: setup.py
python-quaternion/: setup.py
rpi-files/: autostart-night-cafetaria.sh
scripts/: build-docker-build.sh  copy-binaries-zybo.sh  install-cross-gdb.sh  install-opencv.sh  install-python-module.sh  install-zbar.sh  make-sysroot.sh
src/: CMakeLists.txt
src/baremetal-comm/: CMakeLists.txt
src/baremetal-comm/include/: BaremetalCommunicationDef.hpp  SharedMem.hpp  SharedStruct.hpp
src/baremetal-comm/test/: CMakeLists.txt  test-SharedMem.cpp
src/base64/: CMakeLists.txt
src/base64/include/: base64.hpp
src/base64/src/: base64.cpp
src/base64/test/: CMakeLists.txt  test-base64.cpp
src/comm/: CMakeLists.txt
src/comm/include/: BaremetalCommunicationDef.hpp  SharedMem.hpp  wrapper.h
src/comm/src/: SharedMem.cpp  original-wrapper.c  wrapper.c
src/comm/test/: CMakeLists.txt  test-SharedMem.cpp
src/crypto/: CMakeLists.txt
src/crypto/include/: bitString.hpp  crypto.hpp  cryptoException.hpp  cryptoImplementation.hpp  cryptoInstruction.hpp  hwImplementation.hpp  implementation.hpp  swImplementation.hpp
src/crypto/include_given/: EagleCrypt.h
src/crypto/src/: bitString.cpp  bitString.hpp  crypto.cpp  cryptoConstants.hpp  cryptoPoller.cpp  cryptoPoller.hpp  hwImplementation.cpp  hwImplementation.hpp  keccak.cpp  keccak.hpp  ketje.cpp  ketje.hpp  registers.hpp  swImplementation.cpp  swImplementation.hpp
src/crypto/src_given/: EagleCryptSW.c
src/crypto/test/: CMakeLists.txt  test-crypto-PC.cpp  test-crypto.cpp
src/crypto/xkcp/: CMakeLists.txt  EagleCrypt.h  EagleCrypt.hpp  EagleCryptSW.c  EagleCryptSW.cpp
src/greet/: CMakeLists.txt
src/greet/test/: CMakeLists.txt
src/grid-finder/: CMakeLists.txt
src/grid-finder/include/: Angle.hpp  AngleTracker.hpp  GridFinder.hpp  HelperStructs.hpp  Line.hpp
src/grid-finder/test/: CMakeLists.txt  TestMask.hpp  test-Angle.cpp  test-AngleTracker.cpp  test-GridFinder.cpp  test-Line.cpp  tmp.cpp
src/location-finder/: CMakeLists.txt
src/location-finder/include/: LocationFinder.hpp  LocationTracker.hpp  OutlierRejection.hpp
src/location-finder/src/: LocationFinder.cpp  Mask-NEON.hpp  Mask.cpp  Mask.hpp
src/location-finder/test/: CMakeLists.txt  test-LocationFinder.cpp
src/logentry/: CMakeLists.txt  Codegen.json  Codegen.py  CodegenSnippets.py  NewCodeGen.py  setup.py.in
src/logentry/include/: GetLogData.hpp
src/logentry/templates/: DroneLogger.py.template.c  LogEntry.template.cpp  LogEntry.template.h  logger.drone.template.cpp
src/logger/: CMakeLists.txt
src/logger/include/: Logger.hpp  MulticastSender.hpp  ThreadedLogger.hpp  UDPSender.hpp
src/logger/src/: Logger.cpp  MulticastSender.cpp  ThreadedLogger.cpp  UDPSender.cpp  multicast.cpp
src/logger/test/: CMakeLists.txt  test-multicast.cpp
src/mask/: CMakeLists.txt
src/mask/include/: Mask.hpp
src/mask/src/: GenerateMask-Unroll.ipp  GenerateMask-Unroll.py  Mask-Fallback.hpp  Mask-NEON.hpp  Mask.cpp  NEON-PrintHelpers.hpp  Threshold.hpp
src/mask/test/: CMakeLists.txt  test-Mask.cpp
src/matrix/: CMakeLists.txt
src/matrix/include/: Array.hpp  Matrix.hpp
src/matrix/test/: CMakeLists.txt  test-AlmostEqual.cpp  test-LeastSquares.cpp  test-Matrix.cpp  test-QR.cpp
src/py-grid-finder/: CMakeLists.txt
src/py-grid-finder/include/: Grid-Finder.module.hpp
src/py-matrix/: CMakeLists.txt
src/py-matrix/test/: CMakeLists.txt
src/py-quaternion/: CMakeLists.txt
src/py-quaternion/src/: PyQuaternion.cpp
src/qr-crypto-manager/: CMakeLists.txt
src/qr-crypto-manager/include/: QRCryptoManager.hpp
src/qr-crypto-manager/src/: QRCryptoManager.cpp
src/qr-decode/: CMakeLists.txt
src/qr-decode/include/: QR-Decode.hpp
src/qr-decode/src/: QR-Decode.cpp
src/qr-decode/test/: CMakeLists.txt  test-QR-Decode.cpp
src/quaternion/: CMakeLists.txt
src/quaternion/include/: AnglePrinter.hpp  Quaternion.hpp
src/quaternion/test/: CMakeLists.txt  test-Quaternion.cpp
src/real_t/: CMakeLists.txt
src/real_t/include/: real_t.h
src/summer/: CMakeLists.txt
src/summer/logger/: CMakeLists.txt
src/summer/logger/include/logger/: LogEntryIterator.hpp  Loggable.hpp  Logger.hpp  Logger.ipp  LoggerMathTypes.hpp  LoggerTypes.hpp  ParsedLogEntry.hpp
src/summer/logger/src/: LogEntryIterator.cpp  Loggable.cpp  Logger.cpp  LoggerHelpers.hpp  ParsedLogEntry.cpp
src/summer/math/: CMakeLists.txt
src/summer/math/include/math/: Degrees.hpp  Quaternion.hpp  Vector.hpp  cmath
src/utilities/: CMakeLists.txt
src/utilities/include/: PerfTimer.hpp
src/utilities/test/: CMakeLists.txt
zybo-files/: .gdbinit  dropbear_dss_host_key  dropbear_ecdsa_host_key  dropbear_rsa_host_key  ldpath.sh  run-all-tests.sh  start-dvb.sh
(+2549 files in other folders)
