add_subdirectory(greet)
add_subdirectory(comm)
add_subdirectory(crypto)
add_subdirectory(logger)
add_subdirectory(matrix)
add_subdirectory(utilities)
add_subdirectory(grid-finder)
add_subdirectory(mask)
add_subdirectory(location-finder)
add_subdirectory(qr-decode)
add_subdirectory(base64)
add_subdirectory(qr-crypto-manager)

if (NOT CMAKE_CROSSCOMPILING)
add_subdirectory(py-matrix)
add_subdirectory(py-grid-finder)
endif()